# chicken-gate-rust

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: chicken.rs  main.rs
